# project56

./: ping1d-simple.ino  sonar_arduino_i2c.ino
CAN-Bus/: CANReceiver_custom.ino  CANsend_custom_softwareSerial.ino  CANsender_custom.ino
CAN-Bus/CANsend_custom_softwareSerial/: CANsend_custom_softwareSerial.ino
project56/: README.md
project56-AIS/Microtransat-Collision-Avoidance/: CollisionCalculate.py  CollisionCalculate2.py  CollisionCalculateSerial.py  data2.txt  receiveDataSendSerial.py
project56-AIS/pico/testPing/: ping.c  testPing.cpp
project56-Sonar/: sonar_arduino.ino
project56/CANReceiver_custom/CANReceiver_custom/: CANReceiver_custom.ino
project56/Microtransat-Collision-Avoidance/: decodeIncomingAISData.py  receiveDataTest.py
project56/ais/: AUTHORS  CMakeLists.txt  create_table.txt
project56/ais/apps/: ais_square.py  aisrcv-soundcard.py  aisrcv-usrp.grc
project56/ais/grc/: CMakeLists.txt  ais_invert10_bb.xml
project56/ais/include/: CMakeLists.txt  ais_ais_nmea.h  ais_invert10_bb.h  ais_nmea_decoder.h  config.h.in
project56/ais/python/: CMakeLists.txt  __init__.py
project56/ais/swig/: CMakeLists.txt  ais_swig.i
project5622/project56/: startCubic
project566/: ESP8266_StandaloneTest.ino  README.md
project566/Microtransat-Collision-Avoidance/: CollisionCalculate.py  data.txt  data3.txt
project566/pico/testPing/: .ping.c.swp  CMakeLists.txt  testPing.cpp
project56back/Microtransat-Collision-Avoidance/: aisDecodeTest.py  echo  receiveDataTest.py
project56back/ais/: create_table.sql
rtl-ais/: rtl_ais
(+21 files in other folders)
